# labproject

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  matplotlibrc  mkdocs.yml  objects.inv  pyproject.toml  sample_size_auguste.ipynb
.github/workflows/: push_to_overleaf.yml  run_experiments.yml  test_experiments.yml  test_run_push_to_overleaf.yml
api/: index.html
configs/: conf_default.yaml  conf_dims.yaml  conf_embedding_samplesize.yaml  conf_main_scaling_experiment.yaml  conf_mmd_bandwidth_experiment.yaml  conf_mmd_main_scaling_experiment.yaml  conf_mmd_main_scaling_experiment_different_kernels.yaml  conf_samplesize.yaml  conf_scale.yaml  conf_scale_gamma.yaml  conf_scale_reduced.yaml  conf_scale_reduced_few_samples.yaml  conf_supp_dim_scaling_experiment.yaml
configs/deprecated/: conf_all_samplesize.yaml  conf_scale_reduced.yaml  conf_scale_reduced_MMD_experiment.yaml
data/: roitman_data_clean.csv
data/applications/: roitman_data_clean.csv
docs/: api.md  index.md
docs/notebooks/: MMD_intro.ipynb  MMD_misspec_experiment.ipynb  application1.ipynb  application1_copy.ipynb  application1_main_figures.ipynb  application1_refactoring.ipynb  application2.ipynb  application3.ipynb  compare_swd_sinkhorn.ipynb  embedding_sample_size.ipynb  example.ipynb  fid.ipynb  gamma_scaling_MMD.ipynb  mmd_sbi_vs_our.ipynb  mmd_scale_wid.ipynb  mode_comparison.ipynb  sample_size_auguste.ipynb  sample_size_dim_scaling.ipynb  sample_size_dim_scaling_MMD.ipynb  scaling_dims_franzi.ipynb  wasser_misspec_experiment.ipynb  wasserstein_intuition.ipynb  wellspecified_fit.ipynb
labproject/: data.py  ddm_basics.ipynb  embeddings.py  experiments.py  figure1.ipynb  plotting.py  roitman_utils.py  run.py  run_default.py  utils.py
labproject/metrics/: MMD.py  MMD_torch.py  __init__.py  c2st.py  gaussian_kl.py  gaussian_squared_wasserstein.py  sliced_wasserstein.py  utils.py  wasserstein_kuhn.py  wasserstein_sinkhorn.py
notebooks/: application1.ipynb  application3.ipynb  sample_size_auguste.ipynb
notebooks/application1/: index.html
notebooks/application2/: index.html
notebooks/application3/: index.html
notebooks/c2st/: 01_illustration.ipynb
notebooks/compare_swd_sinkhorn/: index.html
notebooks/example/: index.html
search/: search_index.json
src/: data.py  plotting.py
(+52 files in other folders)
