[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "labproject"
version = "0.1"

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "torch",
]

[project.optional-dependencies]
docs = [
    "mkdocs",
    # Newer versions currently produce a "'mermaid.js' is undefined" error, see https://github.com/danielfrg/mkdocs-jupyter/issues/176
    "mkdocs-jupyter==0.24.2"
]
dev = [
    "black",
    "pre-commit",
    "jupyter"
]

[tool.setuptools.packages.find]
include=["labproject"]

# Black Configuration
[tool.black]
line-length = 100  # Example: set the line length to 100

# Pre-commit Configuration
[[tool.pre-commit.repos]]
repo = "https://github.com/psf/black"
rev = "stable"
hooks = [
    { id = "black", language_version = "python3" }
]